# TEC

./: .gitmodules  LICENSE  README.md
Algoritmos y Estructuras de Datos I/: 04-05-2015.xlsx  11-03-2015.docx  15-04-2015.docx  16-03-15  Algoritmos de Ordenamiento.docx  18-03-2015 Anаlisis de Datos.docx  18-05-2015 Dijkstra.docx  20-05-2015 - Algoritmo de Floyd.docx  2013009344-CE1103-2015-01-Ensayo - CitizenFour.docx  2013009344-CE1103-2015-01-R1.docx  2013009344-CE1103-2015-01-R2.docx  2013009344-CE1103-2015-1-R11.12.13.docx  2013009344-CE1103-2015-1-R14,15 y 16.pdf.docx  23-03-2015 - Algoritmos de Bгsqueda.docx  Algoritmo de Huffman.docx  Documentaciвn Primer Proyecto Programado.docx  Documento1.docx  Manual de Usuario.pub  Resumen 1.docx
Algoritmos y Estructuras de Datos I/Proyecto1/: Documentaciвn Primer Proyecto Programado.docx  Manual de Usuario.docx  Manual de Usuario.pub
Algoritmos y Estructuras de Datos I/Proyecto2/: Instituto Tecnolвgico de Costa Rica.docx  Manual de Usuario.pub
Algoritmos y Estructuras de Datos II/Proyecto Diagnвstico/: Bitаcora Arturo.docx  Bitаcora Juan.docx  Documentacion externa.docx
Algoritmos y Estructuras de Datos II/Resúmenes/: 2013009344-CE2103-2015-2-R1.docx  2013009344-CE2103-2015-2-R10.docx  2013009344-CE2103-2015-2-R11.docx  2013009344-CE2103-2015-2-R12.doc  2013009344-CE2103-2015-2-R13.docx  2013009344-CE2103-2015-2-R2.docx  2013009344-CE2103-2015-2-R3.docx  2013009344-CE2103-2015-2-R5.docx  2013009344-CE2103-2015-2-R7.docx  2013009344-CE2103-2015-2-R8.docx  2013009344-CE2103-2015-2-R9.docx
Análisis Numérico para Ingeniería/Examen/: octave-workspace  pca.m  posfromdist.m  regopt.m
Análisis Numérico para Ingeniería/Tareas/Tarea 6/Tarea6.2/src/: CMakeLists.txt  main.cpp
Diseño Logico/Archivos Multisim/: Comparador binario.ms14  Contador JK.ms14  Display 7 Segmantos.ms14  Maquina expededora.xlsx  MaquinaBebidas 2.0.ms14  MaquinaBebidas 2.0.ms14 (Security copy)  MaquinaBebidas 3.0.ms14  MaquinaBebidas 3.0.ms14 (Security copy)  MaquinaBebidas.ms14  MaquinaBebidas.ms14 (Security copy)  MаquinaDeChocolates.ms14  MаquinaDeChocolates.ms14 (Security copy)  SumRest29.ms14
Diseño Logico/Código de Hamming/: HammingArturo.py  hamming.py  interfaz.py
Diseño de Sistemas Digitales/Bolsa de Confites/: ADDER_TB.vhd  ALUV1ChiGaRo.vhd  (+33 more)
Intrucción y Taller de Programación/: Download errors.txt  jueguito.py.txt
Taller de Diseño Digital/: Bitácora Trabajo Individual y en equipo.docx  DE1-SoC_User_manual_v.1.2.2.docx
(+1583 files in other folders)
